backend/deployment/cm-backend/templates/cubejs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cubejs
spec:
  selector:
    app: cubejs
  ports:
  - protocol: TCP
    port: 4000
    targetPort: 4000
  type: ClusterIP
